fix: path to images and text files workin on mobile app too

--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -3,7 +3,6 @@
     font-size:x-large;
     font-weight: 500;
     margin-top: 6%;
-    margin-left: 12px;
 }
 
 .home-subtitle {
@@ -19,7 +18,7 @@
 }
 
 .home-card, .home-card-grid {
-    margin-top: 24px;
+    margin-top: 18px;
     --background: #718da2;
     border-radius: 12px;
     padding: 0px !important;
